feat(auth): implement authentication module with JWT support
- Created AuthController for handling registration, login, logout, and user profile retrieval.
- Developed AuthService for user registration, login, token generation, and refresh token functionality.
- Added DTOs for user registration, login, and refresh token requests.
- Implemented JWT strategy and guard for securing routes.
- Integrated user service for user management and token handling.

feat(events): add WebSocket support for real-time events

- Created EventsGateway for handling WebSocket connections and events.
- Implemented user presence tracking and task-related events (creation, update, deletion).
- Integrated JWT guard for WebSocket connections to ensure authenticated access.

feat(projects): implement project management features

- Developed Project entity, service, and module for managing projects.
- Added CRUD operations for projects with ownership and member management.
- Integrated project service with user service for ownership validation.

feat(tasks): implement task management features

- Created Task entity, service, and controller for managing tasks.
- Added task creation, retrieval, updating, and deletion functionalities.
- Implemented real-time event emission for task updates and creations.

feat(users): implement user management features

- Developed User entity, service, and module for user management.
- Added user registration and retrieval functionalities.
- Implemented password hashing and refresh token management.

chore(config): add database configuration for TypeORM

- Configured TypeORM with PostgreSQL settings and logging options.

chore(seeds): add initial seeding script for user creation

- Created a seed script to populate the database with initial user data.

style: apply consistent formatting and naming conventions across modules

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "seed": "nest start --entryFile seeds/seed",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
@@ -30,13 +31,18 @@
     "@nestjs/platform-socket.io": "^11.1.8",
     "@nestjs/typeorm": "^11.0.0",
     "@nestjs/websockets": "^11.1.8",
+    "@types/passport-jwt": "^4.0.1",
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "ioredis": "^5.8.2",
+    "passport-jwt": "^4.0.1",
     "pg": "^8.16.3",
     "redis": "^5.9.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "shared-types": "workspace:*",
+    "socket.io": "^4.8.1",
     "typeorm": "^0.3.27"
   },
   "devDependencies": {
